# WalletWatchLatinHack1

./: .env  .env.local  API_KEYS_SETUP.md  CONFIGURAR_API_KEYS.md  README.md  WALLET_EXAMPLES.md  capture_logs.html  hardhat.config.cjs  index.html  ofac_cache.json  package-lock.json  package.json  server.mjs  setup-api-keys.sh  tailwind.config.cjs  vite.config.ts
contracts/: VerificationContract.json  VerificationContract.sol  VerificationNFT.sol
contracts/verification_contract/: Cargo.toml  lib.rs
public/nft-images/: README.md  example-usage.md
scripts/: deploy.js
src/: App.tsx  ErrorBoundary.tsx  main.tsx  styles.css
src/components/: AlchemyDetails.tsx  AlchemyDetailsWrapper.tsx  ChainalysisDetails.tsx  ChainalysisDetailsWrapper.tsx  EllipticDetails.tsx  EllipticDetailsWrapper.tsx  EtherscanDetails.tsx  EtherscanDetailsWrapper.tsx  MetaMaskIntegration.tsx  NFTGallery.tsx  NFTImagePreview.tsx  OfacDetails.tsx  OfacDetailsWrapper.tsx  PolkadotTestPage.tsx  WalletExamples.tsx
src/examples/: nftImageExample.ts
src/hooks/: useMetaMask.ts
src/lib/: alchemy.ts  chainalysis.ts  elliptic.ts  etherscan.ts  nftImageGenerator.ts  nftService.ts  ofac.ts  paseoService.ts  polkadot.ts  polkadotService.ts
