[package]
name = "verification_contract"
version = "0.1.0"
authors = ["WalletWatch Team"]
edition = "2021"

[dependencies]
ink_primitives = { version = "4.2.0", default-features = false }
ink_metadata = { version = "4.2.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "4.2.0", default-features = false }
ink_storage = { version = "4.2.0", default-features = false }
ink_lang = { version = "4.2.0", default-features = false }
ink_prelude = { version = "4.2.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_metadata/derive",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[profile.release]
panic = "abort"
codegen-units = 1
overflow-checks = true
lto = "fat"
opt-level = "z"
strip = "symbols"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
